# generic-vm-tempest-plugin

./: .gitignore  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: test_linters.yml
genericvm_tempest_plugin/: config.py  plugin.py
genericvm_tempest_plugin/tests/scenario/: test_image.py
