[metadata]
name = genericvm_tempest_plugin
summary = Plugins to test cloud images
description_file =
    README.md
author = Denys Mischenko
author_email = denys.mischencko@cleura.com
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    genericvm_tempest_plugin

[entry_points]
tempest.test_plugins =
    genericvm_tests = genericvm_tempest_plugin.plugin:GenericVMTempestPlugin


